CHANGES IN 2.5.0 (2008-??-??)
-----------------------------

- New function cbindX that can bind objects with different number of rows.

- write.fwf gains width argument. Unknown values can increase or decrease
  the width of the columns. Additional tests and documentation fixes.

CHANGES IN 2.4.2 (2008-05-11)
-----------------------------

- Enhancements and bug fixes for read.xls() and xls2csv():

    - More informative log messages when verbose=TRUE

    - File paths containing spaces or other non-traditional characters
      are now properly handled

    - Better error messages, particularly when perl fails to generate
      an output .csv file.

    - The 'shortcut' character "~" (meaning user's home directory) is
      now properly handled in file paths.

    - XLS files created by OpenOffice are now properly handled.  Thanks to
       Robert Burns for pointing out the patch
       (http://rt.cpan.org/Public/Bug/Display.html?id=7206)

CHANGES IN 2.4.1 (2008-03-24)
-----------------------------

- Update perl libraries needed by xls2csv() and read.xls()
  to latest available versions on CRAN.

- Add read.xls() to exported function list

- Correct iris.xls example file.  It didn't contain the complete
  & properly formatted iris data set. Fixed.

- Fix typo in win32 example for read.xls()

CHANGES IN 2.4.0 (2008-01-30)
-----------------------------

- The keep() function now includes an 'all' argument to specify how
  objects with names starting with '.' are handled.

- keep() now shows an informative warning message when a requested
  object does not exist

- New vignette "Mapping Levels of a Factor" describing the use of
  mapLevels().

- New vignette "Working with Unknown Values" describing the use of
  isUnknown() and unknownToNA().

- Several enhancements to read.xls() (thanks to Gabor Grothendieck):

  - New function xls2csv(), which handles converting an xls file
    to a csv file and returns a connection to the
    temporary csv file
